force-app/main/default/objects/Field_Mapping__mdt/Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <pluralLabel>Field Mappings</pluralLabel>
</CustomObject>