force-app/main/default/objects/Field_Mapping__mdt/fields/Order_Mapper__c.field-meta.xml
<CustomField>
    <fullName>Order_Mapper__c</fullName>
    <label>Order Mapper</label>
    <referenceTo>Order_Mapper__mdt</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>