force-app/main/default/objects/Field_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>API name of the field on the Source Object.</description>
    <label>Source Field</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>