force-app/main/default/objects/Field_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>API name of the field on the Target Object.</description>
    <label>Target Field</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>